--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -84,6 +84,18 @@
                     </span>
                 </div>
             </div>
+            <div class="policy-parameters-wrapper flex">
+                <span class="policy-parameters-header">Parameters</span>
+                <div class="policy-parameters-items flex flex-wrap">
+                    <div
+                        class="policy-parameters-item flex"
+                        *ngFor="let policyParam of allpolicyParams"
+                    >
+                        <div class="policy-parameters-key">{{ policyParam.key }}</div>
+                        <div class="policy-parameters-value">{{ policyParam.value }}</div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="details-footer">
             <a class="details-footer-text flex" target="_blank" [href]="resolutionUrl">
@@ -91,24 +103,6 @@
                 <img class="right-arrow-icon" src="/assets/icons/right-arrow-icon.svg" />
             </a>
         </div>
-    </div>
-    <div class="table-wrapper">
-        <app-table
-            style="height: 100%; width: 100%"
-            [data]="paramsList"
-            [columnWidths]="columnWidths"
-            [tableErrorMessage]="tableErrorMessage"
-            [tableDataLoaded]="tableDataLoaded"
-            [doLocalSearch]="true"
-            [whiteListColumns]="whiteListColumns"
-            [tableTitle]="tableTitle"
-            (searchCalledEventEmitter)="callNewSearch($event)"
-            [searchQuery]="searchTxt"
-            [tableScrollTop]="tableScrollTop"
-            [totalRows]="totalRows"
-            [showDownloadBtn]="false"
-        >
-        </app-table>
     </div>
 </div>
 
