--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
@@ -18,6 +18,7 @@
 }
 
 .header-text {
+    min-height: 28px;
     font: var(--text-headline-6);
     color: var(--text-medium-emphasis);
 }
@@ -73,7 +74,6 @@ img {
     gap: 12px;
 }
 
-
 .attributes-wrapper {
     gap: 20px;
 }
@@ -82,9 +82,12 @@ img {
     gap: 6px 20px;
 }
 
+.policy-parameters-value {
+    word-break: break-all;
+}
+
 .attribute-wrapper,
-.policy-parameters-item
- {
+.policy-parameters-item {
     flex-direction: column;
     gap: 4px;
 }
