--- a/webapp/src/app/landing-page/home-page/home-page.component.html
+++ b/webapp/src/app/landing-page/home-page/home-page.component.html
@@ -33,9 +33,9 @@
                     <div class='mr-multicloud-wrapper flex flex-col flex-align-center flex-center'>
                         <div class='mr-multicloud flex flex-row flex-align-center flex-center'>
                             <img class='each-cloud' alt='AWS' width="50px" src="{{content.homePage.awsLogo}}">
-                            <div class='each-cloud plus-mark'>+</div>
+                            <div class='each-cloud plus-mark'>&nbsp;</div>
                             <img class='each-cloud' alt='Azure' width="50px" src="{{content.homePage.azureLogo}}">
-                            <div class='each-cloud plus-mark'>+</div>
+                            <div class='each-cloud plus-mark'>&nbsp;</div>
                             <img class='each-cloud' alt='GCP' width="50px" src="{{content.homePage.gcpLogo}}">
                         </div>
                         <div class='mr-multicloud-text'>Multi-Cloud Supported</div>
