feat(compliance-dashboard): centering some columns refactored centering logic

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -33,6 +33,7 @@
     <div class="policy-knowledgebase-content-wrapper">
         <div class="policy-knowledgebase-content">
             <app-table
+                [centeredColumns]="centeredColumns"
                 [columnsSortFunctionMap]="columnsSortFunctionMap"
                 [columnWidths]="columnWidths"
                 [data]="tableData"
@@ -43,6 +44,7 @@
                 [filterTagLabels]="filterTagLabels"
                 [filterTypeLabels]="filterTypeLabels"
                 [headerColName]="headerColName"
+                [rowSize]="'SM'"
                 [searchQuery]="searchTxt"
                 [showAddRemoveCol]="showAddRemoveCol"
                 [showDownloadBtn]="true"
