--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -25,21 +25,24 @@
                         </div>
                     </div>
 
+                    <input
+                        type="search"
+                        matInput
+                        [(ngModel)]="searchQuery"
+                        (keyup)="handleSearch($event)"
+                        placeholder="Search"
+                        class="search-bar-cursor"
+                    />
 
-                    <input type="search" matInput [(ngModel)]="searchQuery" (keyup)="handleSearch($event)"
-                        placeholder="Search" class="search-bar-cursor" />
+                    <img
+                        class="padding-12 pointer"
+                        src="/assets/icons/x-circle.svg"
+                        *ngIf="searchQuery || chips?.length"
+                        (click)="clearSearchTextAndFilters()"
+                        matPrefix
+                        alt="Clear search and filters"
+                    />
 
-                    <!-- <div class="search-in-columns" matSuffix>
-                        <mat-form-field>
-                            <mat-select [formControl]="searchInColumns" multiple>
-                                <mat-option class="disabled-option" disabled="true" value="disabled">SEARCH IN</mat-option>
-                                <mat-option (click)="handleSearchInColumnsChange()" *ngFor="let column of whiteListColumns" [value]="column">
-                                {{column}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div> -->
-                    <img class="padding-12 pointer" src="/assets/icons/x-circle.svg" *ngIf="searchQuery.length>0" (click)="clearSearchText()" matPrefix alt="" />
                     <div class="filter-wrapper flex flex-row" [matMenuTriggerFor]="filterModal" (click)="scrollFilterModalToBottom()" [class.isDisabled]="!showFilterBtn">
                         <img style="padding: 0; height: auto;" src="/assets/icons/filters-icon.svg" alt="">
                     </div>
