--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -3,35 +3,63 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
  * limitations under the License.
  -->
- <div class="violations-table" [class.admin-rights]='adminAccess'>
-     <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding-bottom: 18px">
-        <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
-     </div>
+<div class="violations-table" [class.admin-rights]="adminAccess">
+    <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding-bottom: 18px">
+        <app-breadcrumb
+            *ngIf="breadcrumbLinks.length > 0"
+            [breadcrumbLinks]="breadcrumbLinks"
+            [breadcrumbArray]="breadcrumbArray"
+            [breadcrumbPresent]="breadcrumbPresent"
+        ></app-breadcrumb>
+    </div>
     <div class="violations-header">
         <div class="flex flex-align-center">
-            <!-- <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" src="../assets/icons/left-arrow.svg"> -->
             <span class="title">{{ breadcrumbPresent }}</span>
         </div>
     </div>
     <div class="wrapper">
-        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)"
-            [data]="tableData" [columnWidths]="columnWidths"
-            (headerColNameSelected)="handleHeaderColNameSelection($event)" 
-            [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns"
-            [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
-            [searchQuery]="searchTxt" (nextPageCalled)="nextPg($event)" (downloadClicked)="handlePopClick($event)" (selectedFilterType)='changeFilterType($event)'
-            (selectedFilter)="changeFilterTags($event)" [filteredArray]="filters" [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
-            (deleteFilters)="deleteFilters($event)" [filterTypeOptions]="filterTypeOptions" [tableErrorMessage]='tableErrorMessage'
-            [showDownloadBtn]="showDownloadBtn" [showFilterBtn]="showFilterBtn" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows" (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
-            [tableScrollTop]="tableScrollTop" [tableDataLoaded]="tableDataLoaded" [doLocalSort]="false">
+        <app-table
+            style="height: 100%; width: 100%"
+            [centeredColumns]="centeredColumns"
+            [columnWidths]="columnWidths"
+            [data]="tableData"
+            [direction]="direction"
+            [doLocalSort]="false"
+            [filteredArray]="filters"
+            [filterTagLabels]="filterTagLabels"
+            [filterTypeLabels]="filterTypeLabels"
+            [filterTypeOptions]="filterTypeOptions"
+            [headerColName]="headerColName"
+            [onScrollDataLoader]="onScrollDataLoader"
+            [rowSize]="'SM'"
+            [searchQuery]="searchTxt"
+            [showAddRemoveCol]="true"
+            [showDownloadBtn]="showDownloadBtn"
+            [showFilterBtn]="showFilterBtn"
+            [showSearchBar]="true"
+            [tableDataLoaded]="tableDataLoaded"
+            [tableErrorMessage]="tableErrorMessage"
+            [tableScrollTop]="tableScrollTop"
+            [totalRows]="totalRows"
+            [whiteListColumns]="whiteListColumns"
+            (deleteFilters)="deleteFilters($event)"
+            (downloadClicked)="handlePopClick($event)"
+            (headerColNameSelected)="handleHeaderColNameSelection($event)"
+            (nextPageCalled)="nextPg($event)"
+            (rowSelectEventEmitter)="goToDetails($event)"
+            (searchCalledEventEmitter)="callNewSearch($event)"
+            (selectedFilter)="changeFilterTags($event)"
+            (selectedFilterType)="changeFilterType($event)"
+            (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+        >
         </app-table>
     </div>
 </div>
